# PROJET_ROBO_REDEV

./: .gitignore  LICENSE  README.md  reconfig_dev_2021a_GB.slxc
PD Control M2f/: attitude_control.m  init.m  init_data.m  model.m  model2rotors.asv  model2rotors.m  model4rotors.m  position_control.m  quad2rotors_control.slx  quad2rotors_control.slxc  quad_control.slx  quad_control.slx.r2016b  quad_control.slx.r2021a  quad_control.slxc
Phase 0/: Etat_du_projet_propositions.pptx  MODELS.txt
SMC/: attitude_control.m  backup_init.m  init.m  init_data.m  model.m  model2rotors.m  model4rotors.m  position_control.m  quad_control.slx  quad_control.slx.r2021a  quad_control.slxc
design/: Materials drone solution.docx  berkeley_design_data.txt  materials_drone.txt
formation_simulations_matlab/: .gitignore  3_drones_6_edges.eps  README.md  (+18 more)
ros_pack/projet_robo_redev/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_pack/projet_robo_redev/launch/: demo.launch.py  motor_speed.yaml  robot_descriptio.launch.xml  slider_launch.py
ros_pack/projet_robo_redev/meshes/: Gazebo_Base_Body.stl
ros_pack/projet_robo_redev/projet_robo_redev/: state_publisher.py
ros_pack/projet_robo_redev/urdf/: 4arms.urdf  4arms.urdf.xacro
ros_pack/urdf_tutorial_r2d2/: CMakeLists.txt  package.xml  setup.py
ros_pack/urdf_tutorial_r2d2/launch/: demo.launch.py  drone_cmd.yaml  robot_descriptio.launch.xml  slider_launch.py
ros_pack/urdf_tutorial_r2d2/urdf/: 4arms.urdf  4arms.urdf.xacro
ros_pack/urdf_tutorial_r2d2/urdf_tutorial_r2d2/: control.py  functions.py  simpl.py  state_publisher.py
(+1582 files in other folders)
